# tupitube.desk

./: .gitignore  CMakeLists.txt
launcher/: tupitube.desktop.in
src/: CMakeLists.txt
src/components/: CMakeLists.txt
src/components/brush/: CMakeLists.txt
src/components/colorpalette/: CMakeLists.txt
src/components/export/: CMakeLists.txt
src/components/exposure/: CMakeLists.txt  tupexposuretable.h
src/components/import/: CMakeLists.txt
src/components/player/: CMakeLists.txt
src/components/scenes/: CMakeLists.txt
src/components/timeline/: CMakeLists.txt
src/components/twitter/: CMakeLists.txt
src/components/workspace/: CMakeLists.txt  tupdocumentview.cpp
src/framework/: CMakeLists.txt
src/framework/core/: CMakeLists.txt
src/framework/gui/: CMakeLists.txt  tslider.cpp
src/framework/plugins/: CMakeLists.txt
src/framework/plugins/tgstengine/: CMakeLists.txt
src/framework/sound/: CMakeLists.txt  taudioplayer.cpp
src/libbase/: CMakeLists.txt
src/libcolor/: CMakeLists.txt
src/libtupi/: CMakeLists.txt  tuppaintareastatus.cpp
src/libui/: CMakeLists.txt
src/mypaint/: CMakeLists.txt
src/mypaint/json-c/: CMakeLists.txt
src/mypaint/libmypaint/: CMakeLists.txt
src/mypaint/qtmypaint/: CMakeLists.txt
src/mypaint/raster/: CMakeLists.txt
src/mypaint/raster/brushes/: CMakeLists.txt
src/mypaint/raster/color/: CMakeLists.txt
src/mypaint/raster/main/: CMakeLists.txt
src/net/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/export/: CMakeLists.txt
src/plugins/export/apngplugin/: CMakeLists.txt
src/plugins/export/ffmpegplugin/: CMakeLists.txt
src/plugins/export/imageplugin/: CMakeLists.txt
src/plugins/export/smileplugin/: CMakeLists.txt
src/plugins/export/theoraplugin/: CMakeLists.txt
src/plugins/tools/: CMakeLists.txt
src/plugins/tools/color/: CMakeLists.txt
src/plugins/tools/common/: CMakeLists.txt
src/plugins/tools/fill/: CMakeLists.txt
src/plugins/tools/geometric/: CMakeLists.txt
src/plugins/tools/ink/: CMakeLists.txt
src/plugins/tools/motion/: CMakeLists.txt
src/plugins/tools/nodes/: CMakeLists.txt
src/plugins/tools/opacity/: CMakeLists.txt
src/plugins/tools/papagayo/: CMakeLists.txt
src/plugins/tools/pencil/: CMakeLists.txt
src/plugins/tools/polyline/: CMakeLists.txt
src/plugins/tools/rotation/: CMakeLists.txt
src/plugins/tools/scale/: CMakeLists.txt
src/plugins/tools/selection/: CMakeLists.txt
src/plugins/tools/shear/: CMakeLists.txt
src/shell/: CMakeLists.txt
src/store/: CMakeLists.txt
src/themes/: CMakeLists.txt
src/themes/dark/config/: CMakeLists.txt
src/themes/dark/cursors/: CMakeLists.txt
src/themes/dark/icons/: CMakeLists.txt
src/themes/dark/images/: CMakeLists.txt
src/themes/default/: CMakeLists.txt
src/themes/default/config/: CMakeLists.txt
src/themes/default/cursors/: CMakeLists.txt
src/themes/default/icons/: CMakeLists.txt
src/themes/default/images/: CMakeLists.txt
tools/linux/: tupitube.desk.in
