#CONFIG += ordered warn_on

add_subdirectory(scenes)
add_subdirectory(colorpalette)
add_subdirectory(library)
add_subdirectory(timeline)
add_subdirectory(exposure)
add_subdirectory(export)
add_subdirectory(import)
#add_subdirectory(# kinas)
add_subdirectory(brush)
add_subdirectory(workspace)
add_subdirectory(twitter)
add_subdirectory(player)

#  
## linux-g++ {
##     SUBDIRS += debug
## }
